--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,24 @@ html {
 display: block;
 border-radius: 149px 149px 149px 149px;
 padding: 0;
-margin-left: 50%;
-height: 200px
+margin-left: 40%;
+height: 200px;
+}
+
+.myname {
+  font-size: 50px;
+  font-family: serif;
+  text-align: center;
+}
+#mytagline {
+  text-align: center;
+  margin-bottom: auto;
+}
+.mypersonaldetails {
+  background-color: 20716a;
+}
+#aboutme {
+  color: #ff5959
+  margin-left: 0;
+  margin-right: 0;
 }
