--- a/css/styles.css
+++ b/css/styles.css
@@ -42,39 +42,11 @@ height: 200px;
   text-align: center;
   text-decoration: underline;
   font-style: oblique;
-  font-kerning: normal;
   background-color: #cbf1f5;
 }
 .projects-container1 {
-  display: flex;
-  flex-wrap: wrap;
-  background-color: b1bed5;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  float: left;
-  margin-left: 20px;
-}
-.projects-container2 {
-  display: flex;
-  flex-wrap: wrap;
-  background-color: dfdfdf;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  float: left;
-  margin-left: 20px;
-}
-.projects-container3 {
-  display: flex;
-  flex-wrap: wrap;
-  background-color: blue;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  float: left;
-  margin-left: 20px;
+  display: inline-block;
+  clear: both;
+  background-color: #ebfffa;
+  width: 150px;
 }
