Favorite Icon (favicon added) to page title

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,87 +1,4 @@
-html {
-  padding-top: 0;
-  padding-bottom: 0;
-  margin: 0;
-}
 body {
   margin: 0;
-  background-color: #71c9ce;
-}
-
-a {
- text-decoration: none;
-}
-
-.displayphoto {
-display: block;
-border-radius: 149px 149px 149px 149px;
-padding: 0;
-margin-left: 40%;
-height: 200px;
-}
-
-.myname {
-  font-size: 45px;
-  font-family: serif;
-  text-align: center;
-  font-weight: bolder;
-  color: #ff6f3c;
-}
-#mytagline {
-  text-align: center;
-  margin-bottom: auto;
-}
-.mypersonaldetails {
-  background-color: #729d39;
-}
-.aboutme {
-  background-color: #a6e3e9;
-  margin-top: 0;
-  margin-left: 0;
-  margin-right: 0;
-  text-align: center;
-  padding-bottom: 5px;
-}
-.whycode {
-  color: red;
-  }
-.education-work {
-  background-color: #c2fcf6;
-  display: inline-block;
-  word-wrap: break-word;
-}
-.education-background {
-  word-wrap: normal;
-  float: left;
-}
-
-.work-background {
-  float: left;
-  word-wrap: normal;
-}
-.hobbies {
-  background-color: #e9fadd;
-  word-wrap: normal;
-  display: inline-block;
-}
-.projectsdone {
-  border-style: dotted;
-  border-width: thin;
-  padding-top: 5px;
-  margin-top: 0;
-  margin-left: 0;
-  text-align: center;
-  background-color: #cbf1f5;
-  font-family: sans-serif;
-}
-.projects-container1 {
-  display: inline-block;
-  clear: both;
-  width: 250px;
-  padding-left: 40px;
-  padding-top: 0;
-  padding-bottom: 0;
-}
-hr {
-  margin: auto;
+  background-color: #ff8162;
 }
