Comments added in CSS File

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,15 @@
+/*******BLOCK AND INLINE ELEMENTS GO HERE******/
 body {
   margin: 0;
   background-color: #ff8162;
 }
+
+
+
+
+
+
+
+
+
+/*****CLASS TAGS DEFINED BELOW*********/
