--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,9 @@
 /*****BLOCK ELEMENTS STYLING*****/
 body {
   text-align: center;
+  background-color: #a7d7c5;
 }
-img.my-details {
-  border-radius: 100%
-}
+
 
 
 
@@ -12,3 +11,30 @@ img.my-details {
 
 
 /****CLASS ELEMENTS STYLING*****/
+.myphoto {
+  border-radius: 100%;
+  height: 180px;
+}
+.projects-done {
+  display: block;
+  background-color: #ebf0c2;
+  position: relative;
+  margin-top: 30px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.cookie-recipe {
+  height: 100px;
+  width: 100px;
+}
+.travel-website {
+  height: 100px;
+  width: 100px;
+}
+.portfolio-page {
+  height: 100px;
+  width: 100px;
+}
+.reach-me {
+  background-color: #f4f9f4;
+}
