--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,9 @@ body {
   border-radius: 100%;
   height: 180px;
 }
+.my-passion {
+  color: red;
+}
 .projects-done {
   display: block;
   background-color: #ebf0c2;
@@ -25,15 +28,15 @@ body {
   padding-bottom: 50px;
   margin-right: 0;
   margin-left: 0;
+
 }
 .cookie-recipe {
   height: 200px;
   width: 200px;
   float: left;
-  clear: right;
 }
 .recipe {
-  width: 30px;
+    text-align: center;
 }
 .travel-website {
   height: 200px;
