--- a/css/styles.css
+++ b/css/styles.css
@@ -67,4 +67,21 @@ body {
   background-color: #f4f9f4;
   height: 100px;
   padding-top: 30px;
+  padding-bottom: 20px;
+  display: block;
+  position: relative;
+  height: auto;
+  width: 100%;
+}
+.emailme {
+  border-style: solid;
+  border-width: thin;
+  padding: 4px;
+  text-decoration: none;
+  border-color: #dfe2e2;
+  background-color: #1f3c88;
+  border-radius: 20%
+}
+.emailme:hover {
+  background-color: red;
 }
