--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,21 @@ body {
   background-color: #a7d7c5;
   margin: 0;
 }
+h1 {
+
+  font-family: 'Waiting for the Sunrise', cursive;
+
+}
+
+h2 {
+
+  font-family: 'Cormorant Unicase', serif;
+}
+h3 {
+
+  font-family: 'Niramit', sans-serif;
+}
+
 
 
 
